--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "\\.(css|less)$": "<rootDir>/tools/styleMock.js"
     }
   },
-  "homepage": "https://rahmanfasalu.github.io/react-custom-document-generator/",
+  "homepage": "http://rahmanfasalu.github.io/react-custom-document-generator/",
   "dependencies": {
     "bootstrap": "4.5.0",
     "immer": "6.0.9",
